<resources>
    <string name="app_name">D_AlarmApp</string>
    <string name="main_title">Wecker</string>
    <string name="no_alarm_set">Kein Alarm gesetzt</string>
    <string name="active_alarm">Aktiver Alarm: %1$s Uhr</string>
    <string name="alarm_set">Alarm gesetzt: %1$s Uhr</string>
    <string name="alarm_canceled">Alarm abgebrochen</string>
    <string name="alarm_ringing">Alarm!</string>
    <string name="alarm_sub_title">Wecker klingelt</string>
    <string name="alarm_snoozed">Snooze bis %1$s Uhr</string>
    <string name="snooze">Snooze</string>
    <string name="set_alarm">Alarm setzen</string>
    <string name="cancel_alarm">Alarm abbrechen</string>
    <string name="settings">Einstellungen</string>
    <string name="snooze_duration">Snooze-Dauer</string>
    <string name="snooze_one_minute">1 Minute</string>
    <string name="snooze_five_minutes">5 Minuten</string>
    <string name="snooze_ten_minutes">10 Minuten</string>
    <string name="snooze_fifteen_minutes">15 Minuten</string>
    <string name="snooze_saved">Snooze-Dauer: %1$d Minuten</string>
    <string name="alarm_channel_name">Alarm</string>
    <string name="alarm_notification_title">Alarm</string>
    <string name="alarm_notification_text">Alarmzeit: %1$s Uhr</string>
    <string name="exact_alarm_permission_needed">Exakte Alarme in den Einstellungen erlauben</string>
    <string name="snooze_channel_name">Snooze</string>
    <string name="snooze_notification_title">Alarm verschoben</string>
    <string name="snooze_notification_text">Neuer Alarm: %1$s Uhr</string>
</resources>
