<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settingsTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />

        <TextView
            android:id="@+id/snoozeDurationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/snooze_duration"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <RadioGroup
            android:id="@+id/snoozeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/snoozeOneMinuteRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/snooze_one_minute" />

            <RadioButton
                android:id="@+id/snoozeFiveMinutesRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/snooze_five_minutes" />

            <RadioButton
                android:id="@+id/snoozeTenMinutesRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/snooze_ten_minutes" />

            <RadioButton
                android:id="@+id/snoozeFifteenMinutesRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/snooze_fifteen_minutes" />

        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
